--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   flex-direction: column;
 }
 .cardbg:hover {
-  box-shadow: 10px 10px 30px 10px rgba(0, 0, 0, 0.3);
+   box-shadow: 0 0 30px 15px rgba(0, 0, 0, 0.3);
 }
 .content {
   margin: 10px 0 0 0;
@@ -62,6 +62,10 @@ body {
   object-fit: cover;
   height: 100%;
   width: 100%;
+}
+
+.content:hover,.img img:hover{
+  box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.3);
 }
 .spcbtwn {
   margin-top: auto;
