--- a/style.css
+++ b/style.css
@@ -50,21 +50,16 @@ body {
   align-self: center;
   flex-direction: column;
 }
-.img {
+img {
   margin: 0 0 10px 0;
   transform: translateZ(30px);
   height: 350px;
   width: 100%;
   align-self: center;
-}
-.img img {
   border-radius: 15px;
   object-fit: cover;
-  height: 100%;
-  width: 100%;
 }
-
-.content:hover,.img img:hover{
+.content:hover,img:hover{
   box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.3);
 }
 .spcbtwn {
