--- a/style.css
+++ b/style.css
@@ -5,23 +5,22 @@
   box-sizing: border-box;
 }
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-content: center;
-}
-.cardcontainer {
-  padding: 50px;
+  background-color: rgb(151, 151, 151);
   height: 100vh;
   width: 100%;
-  background-color: rgb(151, 151, 151);
-  display: grid;
-  grid-gap: 50px;
-  grid-template-columns: auto auto auto;
+  display: flex;
   justify-content: center;
-  align-content: center;
+  padding: 10px;
+}
+.cardcontainer {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .cardbg {
+  margin: 20px;
   padding: 30px;
   transform-style: preserve-3d;
   transform: perspective(1000px);
@@ -30,7 +29,7 @@ body {
   background-color: rgb(199, 199, 199);
   border-radius: 15px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-direction: column;
 }
 .cardbg:hover {
@@ -48,22 +47,21 @@ body {
   justify-content: center;
   align-self: center;
   flex-direction: column;
-  
 }
 
 img {
+  border: 2px solid rgb(170, 170, 170);
   margin: 0 0 10px 0;
   height: 350px;
   width: 100%;
   align-self: center;
   border-radius: 15px;
   object-fit: cover;
-  
 }
-.content:hover,img:hover{
+.content:hover,
+img:hover {
   transform: translateZ(30px);
   box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.3);
-
 }
 .spcbtwn {
   margin-top: auto;
@@ -95,4 +93,25 @@ button {
 .btn2:hover {
   color: black;
   background-color: gray;
+}
+
+@media only screen and (max-width: 1100px) {
+  /* .card2,
+  .card3 {
+    display: none;
+  } */
+  .cardbg {
+    height: 550px;
+    width: 350px;
+  }
+  .content {
+    padding: 15px;
+    font-size: 15px;
+    height: 180px;
+    width: 100%;
+  }
+  img {
+    height: 300px;
+    width: 100%;
+  }
 }
